...
            "value" : "Cancel"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Annuler"
          }
        }
      }
    },
    "category" : {
      "extractionState" : "manual",
...
    "english" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "English"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Anglais"
...
            "value" : "Top headlines"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Actualités"
          }
        }
      }
    },
    "newsCountry" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "News country"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pays des news"
...
    "newsLanguage" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "News language"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Langue des news"
...
    "search" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Recherche"
          }
        }
      }
    },
    "serverError" : {
      "extractionState" : "manual",
...
    "settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Paramètres"
...
    "warning" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Warning"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Attention"
...
    "yes" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Yes"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Oui"
...
